@@ -36,12 +36,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 355)
-(Parent-Version lpmud 3-3 354)
-(Version-Log "Collected the global identifier initialisation into one function.")
+(Project-Version lpmud 3-3 356)
+(Parent-Version lpmud 3-3 355)
+(Version-Log "struct bug corrections.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 08 Jan 2003 16:27:38 -0700")
+(Checkin-Time "Sat, 11 Jan 2003 19:00:19 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -78,7 +78,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.56 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.418 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.419 644))
   (HISTORY (lpmud/f/49_HISTORY 1.294 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -153,8 +153,8 @@
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
   (src/ed.c (lpmud/c/33_ed.c 1.32.1.27 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.1 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.60 644))
-  (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.3 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.61 644))
+  (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.4 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.19 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
@@ -184,7 +184,7 @@
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.1 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.12 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.13 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -241,7 +241,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.16 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.17.1.1 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.19 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.65.1.20 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
